@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: main.c,v 1.640.2.23.2.57.2.3 2007/10/18 13:11:46 dmitry Exp $ */
+/* $Id: main.c,v 1.640.2.23.2.57.2.4 2007/11/22 13:27:13 dmitry Exp $ */
 
 /* {{{ includes
  */
@@ -1929,6 +1929,7 @@ PHPAPI int php_execute_script(zend_file_handle *primary_file TSRMLS_DC)
 	int old_cwd_fd = -1;
 #else
 	char *old_cwd;
+	ALLOCA_FLAG(use_heap)
 #endif
 	int retval = 0;
 
@@ -1939,7 +1940,7 @@ PHPAPI int php_execute_script(zend_file_handle *primary_file TSRMLS_DC)
 	}
 #ifndef HAVE_BROKEN_GETCWD
 # define OLD_CWD_SIZE 4096
-	old_cwd = do_alloca(OLD_CWD_SIZE);
+	old_cwd = do_alloca(OLD_CWD_SIZE, use_heap);
 	old_cwd[0] = '\0';
 #endif
 
@@ -2017,7 +2018,7 @@ PHPAPI int php_execute_script(zend_file_handle *primary_file TSRMLS_DC)
 	if (old_cwd[0] != '\0') {
 		VCWD_CHDIR(old_cwd);
 	}
-	free_alloca(old_cwd);
+	free_alloca(old_cwd, use_heap);
 #endif
 	return retval;
 }
@@ -2028,10 +2029,11 @@ PHPAPI int php_execute_script(zend_file_handle *primary_file TSRMLS_DC)
 PHPAPI int php_execute_simple_script(zend_file_handle *primary_file, zval **ret TSRMLS_DC)
 {
 	char *old_cwd;
+	ALLOCA_FLAG(use_heap)
 
 	EG(exit_status) = 0;
 #define OLD_CWD_SIZE 4096
-	old_cwd = do_alloca(OLD_CWD_SIZE);
+	old_cwd = do_alloca(OLD_CWD_SIZE, use_heap);
 	old_cwd[0] = '\0';
 
 	zend_try {
@@ -2052,7 +2054,7 @@ PHPAPI int php_execute_simple_script(zend_file_handle *primary_file, zval **ret 
 		VCWD_CHDIR(old_cwd);
 	}
 
-	free_alloca(old_cwd);
+	free_alloca(old_cwd, use_heap);
 	return EG(exit_status);
 }
 /* }}} */
